src/global/variables.css
html {
  font-family: var(--sl-font-sans);
}

div.grid-300 {
  max-width: 1200px;
  margin: 0 auto;
  display: grid;
  gap: var(--sl-spacing-medium);
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));

  & > * {
    display: block;
  }
}

.text-align-center {
  text-align: center;
}

.can-be-clicked {
  &:hover {
    cursor: pointer;
  }

  border-color: var(--sl-color-blue-100);
  border-style: dashed;
  border-width: 0.5px;
}

